new changes and diff color